--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <form action="#" method="POST" class="contact-form">
                 <input type="text" placeholder="Name">
                 <input type="email" placeholder="Email">
-                <textarea name="message" rows="10">Message</textarea>
+                <textarea name="message" rows="10" placeholder="Message"></textarea>
             </form>
         </div>
     </section>
